--- a/style.css
+++ b/style.css
@@ -210,12 +210,12 @@ input[type="number"] {
 }
 
 .button:hover {
-    background: var(--bg-secondary);
+  background: var(--bg-secondary);
 }
 
 /* === Header === */
 .header {
-  padding: var(--p-1) calc(var(--p-5) * 6);
+  padding: var(--p-2) calc(var(--p-5) * 6);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -226,4 +226,35 @@ input[type="number"] {
   height: var(--h-5);
   border-radius: var(--rounded);
   background: var(--bg-slate);
+}
+
+/* === Container === */
+.container {
+  width: var(--w-full);
+  height: var(--h-full);
+  padding: 0 calc(var(--p-5) * 6);
+  display: flex;
+  justify-content: space-between;
+  column-gap: 2rem;
+}
+
+/* === Sidebar === */
+.sidebar {
+  width: calc(var(--w-10) * 2);
+  height: var(--h-full);
+  background: var(--bg-white);
+}
+
+/* === Content === */
+.content {
+  width: calc(var(--w-10) * 10);
+  height: var(--h-full);
+  background: var(--bg-white);
+}
+
+/* === Avatar === */
+.avatar {
+  width: calc(var(--w-10) * 6);
+  height: var(--h-full);
+  background: var(--bg-white);
 }
