--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ button {
 }
 
 a {
+  display: inline-block;
   text-decoration: none;
 }
 
@@ -235,7 +236,7 @@ input[type="number"] {
 
 /* Subtitle */
 .subtitle {
-  font-size: var(--text-3xl);
+  font-size: var(--text-xxl);
   font-weight: var(--font-semibold);
   margin-bottom: var(--m-3);
 }
@@ -249,7 +250,7 @@ input[type="number"] {
 /* === Header === */
 .header {
   height: var(--h-8);
-  padding: 0 calc(var(--p-2));
+  padding: 0 calc(var(--p-5) * 6);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -266,7 +267,7 @@ input[type="number"] {
 .container {
   width: var(--w-full);
   height: calc(var(--h-full) - var(--h-8));
-  padding: var(--p-5) calc(var(--p-2));
+  padding: var(--p-5) calc(var(--p-5) * 6);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -351,6 +352,7 @@ input[type="number"] {
   width: calc(var(--w-10) * 6);
   height: var(--h-full);
   padding: 0;
+  overflow: hidden;
 }
 
 .avatar-view {
@@ -375,13 +377,32 @@ input[type="number"] {
 }
 
 .avatar-content p:first-child {
-  font-size: var(--text-4xl);
+  font-size: var(--text-xxl);
   font-weight: var(--font-semibold);
 }
 
-.avatar-content p:last-child {
+.avatar-content p:nth-child(2) {
   font-size: var(--text-md);
   color: var(--text-gray);
+  margin-bottom: var(--m-3);
+}
+
+.avatar-content .content-socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 1rem;
+}
+
+.avatar-content .content-socials a i {
+  font-size: var(--text-3xl);
+  color: var(--text-primary);
+  transform: translateY(0);
+  transition: transform var(--transition-time-md) var(--transition-fn);
+}
+
+.avatar-content .content-socials a:hover i {
+  transform: translateY(-20%);
 }
 
 /* === About === */
@@ -426,30 +447,111 @@ input[type="number"] {
 
 .skills-group .group-title span {
   display: inline-block;
-  font-size: var(--text-xl);
+  font-size: var(--text-3xl);
   font-weight: var(--font-semibold);
   margin-bottom: var(--m-1);
 }
 
-.skills-group .group-item {
+.skills-group .group-subject {
   margin-bottom: var(--m-3);
 }
 
-.group-item .item-head {
+.group-subject .subject-head {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: var(--m-1);
 }
 
-.item-head .head-label {
-  font-size: var(--text-lg);
+.subject-head .head-label p:first-child {
+  font-size: var(--text-xl);
   font-weight: var(--font-semibold);
 }
 
-.item-head .head-duration {
-  padding: calc(var(--p-1) - 0.4rem) var(--p-2);
+.subject-head .head-label p:last-child {
+  color: var(--text-gray);
+}
+
+.subject-head .head-year {
+  padding: var(--p-1) var(--p-2);
   border: 1px solid var(--bg-primary);
   border-radius: var(--rounded-xxl);
   color: var(--text-primary);
+}
+
+.group-subject .subject-content {
+  color: var(--text-gray);
+}
+
+.group-programming {
+  display: flex;
+  gap: 2rem;
+}
+
+.group-programming .programming-language {
+  width: calc(var(--w-10) * 2);
+  height: calc(var(--h-10) * 2);
+}
+
+.programming-language .language-percent {
+  --progress: 75;
+  width: var(--w-full);
+  height: var(--h-full);
+  margin-bottom: var(--m-2);
+  border: 5px solid var(--bg-slate);
+  border-radius: var(--rounded-full);
+  position: relative;
+}
+
+.language-percent .percent-number {
+ width: calc(var(--w-full) - 1rem);
+  height: calc(var(--h-full) - 1rem);
+  border: 5px solid var(--bg-slate);
+  background: var(--bg-white);
+  color: var(--text-primary);
+  font-size: var(--text-xxl);
+  border-radius: var(--rounded-full);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+}
+
+.language-percent::before {
+  content: "";
+  width: calc(var(--w-full));
+  height: calc(var(--h-full));
+  border-radius: var(--rounded-full);
+  background: var(--bg-white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.language-percent .percent-bar {
+  content: "";
+  width: calc(var(--w-full) + 1rem);
+  height: calc(var(--h-full) + 1rem);
+  border-radius: var(--rounded-full);
+  /* background: conic-gradient(
+    var(--bg-primary) calc(var(--progress) * 1%),
+    var(--bg-white) 0
+  ); */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.programming-language .language-name {
+  text-align: center;
+  font-size: var(--text-2xl);
+  font-weight: var(--font-semibold);
 }
