--- a/style.css
+++ b/style.css
@@ -485,18 +485,21 @@ input[type="number"] {
 
 .group-programming {
   display: flex;
-  gap: 2rem;
+  flex-wrap: wrap;
+  row-gap: 4rem;
 }
 
 .group-programming .programming-language {
-  width: calc(var(--w-10) * 2);
-  height: calc(var(--h-10) * 2);
+  width: calc(var(--w-full) - 50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .programming-language .language-percent {
-  --progress: 75;
-  width: var(--w-full);
-  height: var(--h-full);
+  width: calc(var(--w-10) * 2);
+  height: calc(var(--h-10) * 2);
   margin-bottom: var(--m-2);
   border: 5px solid var(--bg-slate);
   border-radius: var(--rounded-full);
@@ -539,10 +542,6 @@ input[type="number"] {
   width: calc(var(--w-full) + 1rem);
   height: calc(var(--h-full) + 1rem);
   border-radius: var(--rounded-full);
-  /* background: conic-gradient(
-    var(--bg-primary) calc(var(--progress) * 1%),
-    var(--bg-white) 0
-  ); */
   position: absolute;
   top: 50%;
   left: 50%;
