--- a/style.css
+++ b/style.css
@@ -161,6 +161,9 @@ body {
     var(--bg-primary-rgba-sm) 20%,
     var(--bg-primary-rgba-xs) 90%
   );
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   overflow: hidden;
 }
 
@@ -265,6 +268,23 @@ input[type="number"] {
   background: var(--bg-slate);
 }
 
+.header-mobile-info {
+  display: none;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.header-mobile-info .info-avatar {
+  width: var(--w-5);
+  height: var(--w-5);
+  border-radius: var(--rounded-full);
+  background: var(--bg-slate);
+}
+
+.header-mobile-info .info-name {
+  font-weight: var(--font-semibold);
+}
+
 /* === Container === */
 .container {
   width: var(--w-full);
@@ -280,6 +300,10 @@ input[type="number"] {
 .sidebar {
   width: calc(var(--w-10) * 2);
   height: var(--h-full);
+}
+
+.sidebar-mobile {
+  display: none;
 }
 
 .sidebar-item {
@@ -462,6 +486,8 @@ input[type="number"] {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
   margin-bottom: var(--m-1);
 }
 
@@ -475,7 +501,7 @@ input[type="number"] {
 }
 
 .subject-head .head-year {
-  padding: var(--p-1) var(--p-2);
+  padding: calc(var(--p-1) - 0.2rem) var(--p-3);
   border: 1px solid var(--bg-primary);
   border-radius: var(--rounded-xxl);
   color: var(--text-primary);
@@ -558,29 +584,31 @@ input[type="number"] {
 }
 
 /* === Experiences === */
-.experiences-card {
+.experiences-group {
   margin-bottom: var(--m-3);
 }
 
-.experiences-card .card-head {
+.experiences-group .group-head {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  gap: 2rem;
   margin-bottom: var(--m-2);
 }
 
-.card-head .head-job .job-title {
+.group-head .head-job .job-title {
   font-size: var(--text-2xl);
   font-weight: var(--font-semibold);
 }
 
-.card-head .head-job .job-company {
+.group-head .head-job .job-company {
   font-size: var(--text-lg);
   color: var(--text-gray);
 }
 
-.card-head .head-year {
-  padding: var(--p-1) var(--p-2);
+.group-head .head-year {
+  padding: calc(var(--p-1) - 0.2rem) var(--p-3);
   border: 1px solid var(--bg-primary);
   border-radius: var(--rounded-xxl);
   color: var(--text-primary);
@@ -595,6 +623,8 @@ input[type="number"] {
 
 .projects-list .list-wrapper {
   width: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .list-wrapper .wrapper-item {
@@ -728,4 +758,134 @@ input[type="number"] {
 
 .contact-form .form-button {
   padding: calc(var(--p-1) - 0.4rem) var(--p-3);
+}
+
+/* === Responsive === */
+@media screen and (max-width: 1200px) {
+  /* Header */
+  .header {
+    padding: var(--p-1);
+  }
+
+  .header-mobile-info {
+    display: flex;
+  }
+
+  .header-button {
+    display: none;
+  }
+
+  /* Container */
+  .container {
+    padding: 0 var(--p-2);
+    column-gap: 1rem;
+  }
+
+  /* Content */
+  .content {
+    width: var(--w-full);
+    border-top-right-radius: unset;
+    border-bottom-right-radius: unset;
+    border-bottom-left-radius: unset;
+  }
+
+  .content-item {
+    padding: var(--p-2);
+  }
+
+  /* Avatar */
+  .avatar {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  /* Container */
+  .container {
+    padding: 0;
+    column-gap: 1rem;
+  }
+
+  /* Sidebar  */
+  .sidebar {
+    width: calc(var(--w-10) * 2);
+  }
+
+  .sidebar-desktop {
+    display: block;
+  }
+
+  .sidebar-mobile {
+    display: none;
+  }
+
+  .sidebar .sidebar-item {
+    border-top-left-radius: unset;
+    border-bottom-left-radius: unset;
+    padding: var(--p-1);
+  }
+}
+
+@media screen and (max-width: 765px) {
+  /* Sidebar */
+  .sidebar {
+    width: var(--w-5);
+  }
+
+  .sidebar-desktop {
+    display: none;
+  }
+
+  .sidebar-mobile {
+    display: block;
+  }
+
+  /* Content */
+  .content-item {
+    padding: var(--p-2) calc(var(--p-1) * 1.5);
+  }
+
+  /* Projects */
+  .projects-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* Contact */
+  .contact-info .info-group .group-icon {
+    width: var(--w-5);
+    height: var(--h-5);
+  }
+
+  .contact-info .info-group .group-icon i {
+    font-size: var(--text-xl);
+  }
+
+  .contact-info .info-group .group-content span:nth-child(1) {
+    font-size: var(--text-lg);
+  }
+
+  .contact-info .info-group .group-content span:nth-child(2) {
+    font-size: var(--text-sm);
+  }
+}
+
+@media screen and (max-width: 667px) {
+  /* Skills */
+  .skills-group .group-programming .programming-language {
+    width: var(--w-full);
+  }
+
+  /* Projects */
+  .projects-list .list-wrapper .wrapper-item {
+    width: var(--w-full);
+  }
+
+  /* Projects */
+  .projects-list {
+    grid-template-columns: 1fr;
+  }
+
+  .projects-list .list-wrapper .wrapper-item {
+    width: var(--w-full);
+  }
 }
