--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ input[type="number"] {
 /* === Header === */
 .header {
   height: var(--h-8);
-  padding: 0 calc(var(--p-2));
+  padding: 0 calc(var(--p-5) * 6);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -305,7 +305,7 @@ input[type="number"] {
 .container {
   width: var(--w-full);
   height: calc(var(--h-full) - var(--h-8));
-  padding: var(--p-5) calc(var(--p-2));
+  padding: var(--p-5) calc(var(--p-5) * 6);
   display: flex;
   align-items: center;
   justify-content: space-between;
